--- a/admin_hifi/.htaccess
+++ b/admin_hifi/.htaccess
@@ -4,6 +4,7 @@ RewriteBase /hifi/admin_hifi/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/]*)/([^/]*)/([^/]*)$ ./index.php?p=$1&id=$2&option=$3 [L]
+RewriteRule ^([^/]*)/([^/]*)/$ ./index.php?p=$1&optionn=$2 [L]
 RewriteRule ^([^/]*)/$ ./index.php?p=$1 [L]
 
 ErrorDocument 404       /hifi/admin_hifi/pages/error/404.php
