--- a/admin_hifi/.htaccess
+++ b/admin_hifi/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine on
 RewriteBase /hifi/admin_hifi/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]*)/([^/]*)/([^/]*)$ ./index.php?p=$1&id=$2&option=$3 [L]
+RewriteRule ^([^/]*)/([^/]*)/([^/]*)$ ./index.php?p=$1&option=$2&id=$3 [L]
 RewriteRule ^([^/]*)/([^/]*)/$ ./index.php?p=$1&optionn=$2 [L]
 RewriteRule ^([^/]*)/$ ./index.php?p=$1 [L]
 
